--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,6 +7,41 @@
 
     <body>
         <h1>Lasagna</h1>
+
+        <img src="../images/lasagna.jpg" alt="picture of delicious slice of lasagna" height="300" width="400">
+
+        <h2>Description</h2>
+
+            <p>Short on time but craving a delicious Italian classic? This super easy lasagna recipe is designed to cut down on the effort often associated with creating this delicious dish.</p>
+            <p>Be ready to impress your guests without working yourself to the bone with our easy-peasy lasagna recipe.</p>
+
+        <h2>Ingredients</h2>
+            <ul>
+                <li>1 pound ground beef</li>
+                <li>2 tablespoons vegetable oil</li>
+                <li>2 (14-ounce) canned chopped tomatoes</li>
+                <li>2 (6-ounce) cans tomato paste</li>
+                <li>1 teaspoon salt</li>
+                <li>2 teaspoons Italian seasoning</li>
+                <li>1/4 teaspoon freshly ground black pepper</li>
+                <li>1/4 teaspoon crushed red pepper flakes</li>
+                <li>1/4 teaspoon garlic powder</li>
+                <li>1 (8-ounce) package no-boil lasagna noodles</li>
+                <li>1 cup shredded mozarella cheese</li>
+                <li>1 cup ricotta or small curd cottage cheese</li>
+                <li>1/4 cup grated Parmesan cheese</li>
+                <li>6 slices fresh mozzarella cheese</li>
+                <li>Chopped parsley, for garnish</li>
+            </ul>
+        
+        <h2>Steps</h2>
+            <ol>
+                <li>Preheat the oven to 350°F.</li>
+                <li>Heat the oil in a large skillet over medium heat. Cook the ground beef, stirring to crumble, until browned, 5 to 7 minutes. Drain off the fat.</li>
+                <li>To the skillet of ground beef, add the tomatoes, tomato paste, Italian seasoning, salt, black pepper, red pepper flakes, and garlic powder. Simmer for 5 minutes.</li>
+                <li>Place half of noodles in a lightly greased 12- x 8- x 2-inch baking dish, slightly overlapping lengthwise edges. Spoon one-third of the meat mixture over the noodles; add half of the shredded mozzarella, ricotta or cottage cheese, and Parmesan cheeses. Repeat layers, and spoon on the remaining meat mixture. Arrange the mozzarella slices on top. Cover the baking dish with foil. Bake at 350°F for 35 to 45 minutes. Remove the foil, and continue to bake for an additional 10 minutes.</li>
+                <li>Let the finished dish rest for 10 minutes before serving. Top with chopped parsley, if desired.</li>
+            </ol>
         <a href="../index.html">Home</a>
     </body>
 </html>
