--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <h1>Odin Recipes</h1>
         <ul>
             <li><a href="recipes/lasagna.html">Lasagna</a></li>
-            <li></li>
+            <li><a href="garlictoast.html">Garlic Toast</a></li>
     </ul>
     </body>
 </html>
