Add disclaimer to the homepage
Homepage modified so that anyone looking at this assignment
so everyone would know why I only put in two recipes instead of three.

--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
             <li><a href="recipes/lasagna.html">Lasagna</a></li>
             <li><a href="garlictoast.html">Garlic Toast</a></li>
     </ul>
+    <p> </p>
+    <p><i>Disclaimer: I got bored of copying and pasting recipes and I hate cooking so I only did two of the three recipes for this site.</i></p>
     </body>
 </html>
