Create style sheet for recipes homepage

--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
     <head>
         <meta charset="utf-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
-    <body>
-        <h1>Odin Recipes</h1>
-        <ul>
-            <li><a href="recipes/lasagna.html">Lasagna</a></li>
-            <li><a href="garlictoast.html">Garlic Toast</a></li>
+    <body class="content">
+    <div>
+        <h1 class="title">Odin Recipes</h1>
+        <ul class="recipe-list">
+            <li><button class="button"><a href="recipes/lasagna.html">Lasagna</a></button></li>
+            <li><button class="button"><a href="garlictoast.html">Garlic Toast</a></button></li>
     </ul>
+    </div>
     <p> </p>
     <p><i>Disclaimer: I got bored of copying and pasting recipes and I hate cooking so I only did two of the three recipes for this site.</i></p>
     </body>
